// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Faucet index render component with errors 1`] = `
"<div>
  <div className=\\"pt-dialog-body faucet-container\\">
    <div className=\\"pt-form-group\\">
      <div className=\\"faucet-title\\">
        <h4>
          Request STRATO tokens to use and launch apps.
        </h4>
      </div>
      <div className=\\"faucet-body\\">
        <img src={{...}} alt=\\"Request Token\\" className=\\"side-image\\" />
        <div className=\\"pt-form-group pt-intent-danger faucet-form\\">
          <label className=\\"pt-label\\" htmlFor=\\"input-b\\">
            Using and launching apps requires tokens. Tell us what you are building so we can fund you.
          </label>
          <div className=\\"pt-form-content\\">
            <Field name=\\"building\\" component=\\"textarea\\" type=\\"text\\" placeholder=\\"I am building...\\" className=\\"pt-input form-width\\" tabIndex=\\"3\\" required={true} />
            <div className=\\"pt-form-helper-text\\">
              Please tell us what are you building
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div className=\\"col-sm-3\\" />
      <div className=\\"col-sm-3\\" />
      <div className=\\"col-sm-3\\" />
    </div>
  </div>
  <div className=\\"pt-dialog-footer\\">
    <div className=\\"pt-dialog-footer-actions\\">
      <Blueprint.Button intent={0} onClick={[undefined]} text=\\"Send email to BlockApps\\" disabled={false} />
    </div>
  </div>
</div>"
`;

exports[`Test Faucet index render component without errors 1`] = `
"<div>
  <div className=\\"pt-dialog-body faucet-container\\">
    <div className=\\"pt-form-group\\">
      <div className=\\"faucet-title\\">
        <h4>
          Request STRATO tokens to use and launch apps.
        </h4>
      </div>
      <div className=\\"faucet-body\\">
        <img src={{...}} alt=\\"Request Token\\" className=\\"side-image\\" />
        <div className=\\"pt-form-group pt-intent-danger faucet-form\\">
          <label className=\\"pt-label\\" htmlFor=\\"input-b\\">
            Using and launching apps requires tokens. Tell us what you are building so we can fund you.
          </label>
          <div className=\\"pt-form-content\\">
            <Field name=\\"building\\" component=\\"textarea\\" type=\\"text\\" placeholder=\\"I am building...\\" className=\\"pt-input form-width\\" tabIndex=\\"3\\" required={true} />
            <div className=\\"pt-form-helper-text\\" />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div className=\\"col-sm-3\\" />
      <div className=\\"col-sm-3\\" />
      <div className=\\"col-sm-3\\" />
    </div>
  </div>
  <div className=\\"pt-dialog-footer\\">
    <div className=\\"pt-dialog-footer-actions\\">
      <Blueprint.Button intent={0} onClick={[undefined]} text=\\"Send email to BlockApps\\" disabled={false} />
    </div>
  </div>
</div>"
`;

exports[`Test Faucet index simulate send email button click 1`] = `
"<div>
  <div className=\\"pt-dialog-body faucet-container\\">
    <div className=\\"pt-form-group\\">
      <div className=\\"faucet-title\\">
        <h4>
          Request STRATO tokens to use and launch apps.
        </h4>
      </div>
      <div className=\\"faucet-body\\">
        <img src={{...}} alt=\\"Request Token\\" className=\\"side-image\\" />
        <div className=\\"pt-form-group pt-intent-danger faucet-form\\">
          <label className=\\"pt-label\\" htmlFor=\\"input-b\\">
            Using and launching apps requires tokens. Tell us what you are building so we can fund you.
          </label>
          <div className=\\"pt-form-content\\">
            <Field name=\\"building\\" component=\\"textarea\\" type=\\"text\\" placeholder=\\"I am building...\\" className=\\"pt-input form-width\\" tabIndex=\\"3\\" required={true} />
            <div className=\\"pt-form-helper-text\\" />
            <p className=\\"send-email-text\\">
              Send an email to product@blockapps.net with your address and use-case to receive your tokens.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div className=\\"col-sm-3\\" />
      <div className=\\"col-sm-3\\" />
      <div className=\\"col-sm-3\\" />
    </div>
  </div>
  <div className=\\"pt-dialog-footer\\">
    <div className=\\"pt-dialog-footer-actions\\">
      <Blueprint.Button intent={0} onClick={[undefined]} text=\\"Send email to BlockApps\\" disabled={false} />
    </div>
  </div>
</div>"
`;
